--- a/style.css
+++ b/style.css
@@ -1,28 +1,8 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
+  content: "";
+  font-family: "Century Schoolbook";
+  font-size: 1.2vw;
+  position: relative;
   margin: 0;
   display: flex;
   place-items: center;
@@ -30,73 +10,66 @@ body {
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+section {
+  position: relative;
+  z-index: 1;
+  padding: 20px;
+  width: 80%;
+  margin: auto;
+}
+
+h1{
+  line-height: 1.5em;
+  border: .5vw;
+  border-style: ridge;
+  border-style: outset;
+  border-color: #8b4513; /* Changed to a wood brown */
+  background-color: #f0e68c; /* Changed to a light earthy yellow */
+  opacity: 1;
+  border-radius: 10px;
   text-align: center;
+  color: black;
+  padding: 1vw;
+  font-size: 2.5em;
+  margin-top: 0;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+h2 {
+  line-height: 1.5em;
+  border: .5vw;
+  border-style: ridge;
+  border-style: outset;
+  border-color: #8b4513; /* Changed to a wood brown */
+  background-color: #f0e68c; /* Changed to a light earthy yellow */
+  opacity: 1;
+  border-radius: 10px;
+  text-align: center;
+  color: black;
+  padding: 1vw;
+  font-size: 2.5em;
+  margin-top: 0;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-canvas{
-  position:fixed;
-  top:0;
-  left:0;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+p,
+ul {
+  line-height: 1.5em;
+  border: .5vw;
+  border-style: ridge;
+  border-style: outset;
+  border-color: #8b4513; /* Changed to a wood brown */
+  background-color: #f5deb3; /* Changed to wheat color */
+  color: black;
+  width: 90%;
+  opacity: 1;
+  border-radius: 10px;
+  padding: 1vw;
+  font-size: 1.25em;
+  margin: 1vw auto;
 }
